Cannot invoke "org.eclipse.jdt.internal.compiler.lookup.TypeBinding.hasNullTypeAnnotations()" because "providedType" is null
fixes #1954